# seqname

./: Cargo.toml  LICENSE  Makefile  README.md
doc/: seqname.1.md
src/: main.rs  renamer.rs
