[package]
name = "seqname"
version = "0.3.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
description = "Name files in dir(s) sequentially"
repository = "https://github.com/chrisdavison/seqname"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
